fixed issue with bottom row of cards getting cut off

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,17 +1,6 @@
 /* Styling for Footer */
-footer {
-    position: relative;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 30px;
-    width: 100%;
-    background-color: black;
-  }
-
 h6 {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    margin: 0;
     padding-top: 75px;
     color: rgb(194, 192, 192);
     font-size: 20px;
