--- a/src/styles/PageStyling.css
+++ b/src/styles/PageStyling.css
@@ -16,6 +16,10 @@ h2 {
     margin-bottom: 0px;
 }
 
+.bottom-row {
+    margin-bottom: 20px;
+}
+
 /* Specific Page Styling */
 
 /* About Page  */
