--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -18,7 +18,6 @@
     height: auto;
     border-radius: 10px;
     margin: auto;
-    margin-bottom: 10px;
     border: 1px solid black;
 }
 
